# ZeroDock-ethdam-2024

./: .gitignore  README.md  bun.lockb  cdk.json  deploy.sh  package-lock.json  package.json  send.sh
contracts/: bun.lockb  hardhat.config.ts
contracts/contracts/: ProofStore.sol  ZeroDock.sol
contracts/ignition/deployments/chain-84532/: deployed_addresses.json  journal.jsonl
contracts/ignition/modules/: ProofStore.ts  ZeroDock.ts
contracts/scripts/: generate.ts
frontend/: bun.lockb  package-lock.json  package.json
frontend/.next/: app-build-manifest.json  build-manifest.json  trace
frontend/.next/server/: next-font-manifest.json  server-reference-manifest.json
frontend/.next/static/chunks/: [root of the server]__9a168d._.css  [root of the server]__9a168d._.css.map  _0295c1._.js.map  node_modules_4cad80._.js.map  (+7 more)
frontend/src/api/: data.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ClipboardCopy.tsx  EventRow.tsx  EventTable.tsx  RefreshTable.tsx  VerifyButton.tsx
lib/: ethdam-2024-stack.ts
src/lambda/api/: go.mod  go.sum
src/lambda/executor/: Dockerfile  go.mod  go.sum
src/lambda/prover/: Cargo.toml  Dockerfile
src/lambda/prover/src/: circuit.rs  circuit_params.rs  main.rs  util.rs
src/lambda/setup/: Cargo.toml  Dockerfile
src/lambda/setup/src/: main.rs
src/lambda/socket-listener/: Dockerfile  package.json  tsconfig.json
src/lambda/user_app/: Dockerfile  main.py
src/lambda/verify/: Cargo.toml  Dockerfile
src/lambda/verify/src/: error.rs  main.rs
test/: ethdam-2024.test.ts
(+31 files in other folders)
