[package]
name = "setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = "0.14.0"
bls12_381 = "0.8.0"
hex = "0.4.3"
rand = "0.8.5"
rand_core = "0.6.4"
lambda_runtime = "0.9.2"
tokio = "1.33.0"
log = "0.4.20"
simple_logger = "4.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"