[package]
name = "verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = "0.14.0"
bls12_381 = "0.8"
lambda_runtime = "0.8.2"
tokio = { version = "1.33.0", features = ["full"] }
log = "0.4.20"
simple_logger = "4.3.0"
serde_json = "1.0.111"
hex = "0.4"
serde = "1.0.196"
